samples/_failures_safe/1761660316_50d63b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec553206.c: In function ‘main’:
./samples/SAFE/__tmp_ec553206.c:125:16: error: missing terminating " character
  125 |         printf("Options: 1=Show errors, 2
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ec553206.c:125:9: error: expected expression at end of input
  125 |         printf("Options: 1=Show errors, 2
      |         ^~~~~~
./samples/SAFE/__tmp_ec553206.c:125:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec553206.c:125:9: error: expected declaration or statement at end of input
